<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="30dp">

            <TextView
                android:id="@+id/txt_add_task_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_task"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/txt_add_task_screen_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.53"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txt_add_task_screen_title"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="232dp"
                android:background="@drawable/input_style"
                android:ems="10"
                android:hint="@string/add_task_title_hint"
                android:includeFontPadding="false"
                android:inputType="textPersonName"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txt_add_task_screen_description"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:width="300dp"
                android:background="@drawable/input_style"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/add_task_description_hint"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_add_task_screen_title"
                app:layout_constraintVertical_bias="0.165" />

            <RadioGroup
                android:id="@+id/radio_priority_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_add_task_screen_description">

                <RadioButton
                    android:id="@+id/radio_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/priority_normal" />

                <RadioButton
                    android:id="@+id/radio_important"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_important" />

                <RadioButton
                    android:id="@+id/radio_urgent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/priority_urgent" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>